--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,46 +1,49 @@
-<div class=''>
-  <div class=''>
-    <h2>Login</h2>
+<div class="flex justify-center items-center h-screen bg-gray-100">
+  <div class="w-full max-w-md flex">
+    <div class="w-full max-w-md px-2">
+      <h2 class="text-3xl font-bold mb-6 text-center ">Login</h2>
 
-    <form id='login-form'>
-      <div class=''>
-        <label for=''>email:</label>
-        <input class='' type='text' id='email-login' />
-      </div>
-      <div class=''>
-        <label for=''>password:</label>
-        <input class='' type='password' id='password-login' />
-      </div>
-      <div class=''>
-        <button class='' type='submit'>login</button>
-      </div>
-    </form>
-  </div>
-  <div class=''>
-    <h2>Signup</h2>
+      <form id="login-form" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+        <div class="mb-4">
+          <label class="block text-gray-700 text-sm font-bold mb-2" for="email-login">Email:</label>
+          <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight " type="text" id="email-login" placeholder="Enter your email" />
+        </div>
+        <div class="mb-6">
+          <label class="block text-gray-700 text-sm font-bold mb-2" for="password-login">Password:</label>
+          <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight " type="password" id="password-login" placeholder="Enter your password" />
+        </div>
+        <div class="flex items-center justify-between">
+          <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded " type="submit">Login</button>
+        </div>
+      </form>
+    </div>
 
-    <form id='signup-form'>
-      <div class=''>
-        <label for='name-signup'>first name:</label>
-        <input class='' type='text' id='first-name-signup' />
-      </div>
-      <div class=''>
-        <label for='name-signup'>last name:</label>
-        <input class='' type='text' id='last-name-signup' />
-      </div>
-      <div class=''>
-        <label for='email-signup'>email:</label>
-        <input class='' type='text' id='email-signup' />
-      </div>
-      <div class=''>
-        <label for='password-signup'>password:</label>
-        <input class='' type='password' id='password-signup' />
-      </div>
-      <div class=''>
-        <button class='' type='submit'>signup</button>
-      </div>
-    </form>
+    <div class="w-full max-w-md px-2">
+      <h2 class="text-3xl font-bold mb-6 text-center">Register</h2>
+
+      <form id="signup-form" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+        <div class="mb-4">
+          <label class="block text-gray-700 text-sm font-bold mb-2" for="first-name-signup">First Name:</label>
+          <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight " type="text" id="first-name-signup" placeholder="Enter your first name" />
+        </div>
+        <div class="mb-4">
+          <label class="block text-gray-700 text-sm font-bold mb-2" for="last-name-signup">Last Name:</label>
+          <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight " type="text" id="last-name-signup" placeholder="Enter your last name" />
+        </div>
+        <div class="mb-4">
+          <label class="block text-gray-700 text-sm font-bold mb-2" for="email-signup">Email:</label>
+          <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight " type="text" id="email-signup" placeholder="Enter your email" />
+        </div>
+        <div class="mb-6">
+          <label class="block text-gray-700 text-sm font-bold mb-2" for="password-signup">Password:</label>
+          <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight " type="password" id="password-signup" placeholder="Enter your password" />
+        </div>
+        <div class="flex items-center justify-between">
+          <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded " type="submit">Signup</button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
 
-<script src='./js/login.js'></script>
+<script src="./js/login.js"></script>
