--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,12 +1,4 @@
-<section class="bg-gray-700">
-<section class="bg-gray-700">
-    <div>
-        <h1 class="text-7xl text-red-500">AudioRed</h1>
-    </div>
-
-    <br>
-    
-
+<section class="">
     <nav class="flex justify-end">
         <div>
             <button class="text-xl bg-red-500 text-white px-4 py-2 rounded-md">Trending</button>
@@ -19,61 +11,25 @@
 
 </section>
 <br>
-
-<section class="bg-gray-700">
     <div>
-        <h2 class="flex flex text-white justify-center text-4xl">Trending Now</h2>
+        <h2 class="flex flex text-white  text-4xl">Trending Now</h2>
         <br>
         <p class="text-2xl text-white indent-80 mb-4">1</p>
-        <p class="text-2xl text-white indent-80 mb-4">2</p>
-        <p class="text-2xl text-white indent-80 mb-4">3</p>
-        <p class="text-2xl text-white indent-80 mb-4">4</p>
-        <p class="text-2xl text-white indent-80 mb-4">5</p>
-        <p class="text-2xl text-white indent-80 mb-4">6</p>
-        <p class="text-2xl text-white indent-80 mb-4">7</p>
-        <p class="text-2xl text-white indent-80 mb-4">8</p>
-        <p class="text-2xl text-white indent-80 mb-4">9</p>
-        <p class="text-2xl text-white indent-80 mb-4">10</p>
-    </div>
     <br>
     <div>
-        <h2 class="flex flex text-white justify-center text-4xl">Top 25</h2>
+        <h2 class="flex flex text-white text-4xl">Top 25</h2>
         <br>
         <p class="text-2xl text-white indent-80 mb-4">1</p>
-        <p class="text-2xl text-white indent-80 mb-4">2</p>
-        <p class="text-2xl text-white indent-80 mb-4">3</p>
-        <p class="text-2xl text-white indent-80 mb-4">4</p>
-        <p class="text-2xl text-white indent-80 mb-4">5</p>
-        <p class="text-2xl text-white indent-80 mb-4">6</p>
-        <p class="text-2xl text-white indent-80 mb-4">7</p>
-        <p class="text-2xl text-white indent-80 mb-4">8</p>
-        <p class="text-2xl text-white indent-80 mb-4">9</p>
-        <p class="text-2xl text-white indent-80 mb-4">10</p>
-        <p class="text-2xl text-white indent-80 mb-4">11</p>
-        <p class="text-2xl text-white indent-80 mb-4">12</p>
-        <p class="text-2xl text-white indent-80 mb-4">13</p>
-        <p class="text-2xl text-white indent-80 mb-4">14</p>
-        <p class="text-2xl text-white indent-80 mb-4">15</p>
-        <p class="text-2xl text-white indent-80 mb-4">16</p>
-        <p class="text-2xl text-white indent-80 mb-4">17</p>
-        <p class="text-2xl text-white indent-80 mb-4">18</p>
-        <p class="text-2xl text-white indent-80 mb-4">19</p>
-        <p class="text-2xl text-white indent-80 mb-4">20</p>
-        <p class="text-2xl text-white indent-80 mb-4">21</p>
-        <p class="text-2xl text-white indent-80 mb-4">22</p>
-        <p class="text-2xl text-white indent-80 mb-4">23</p>
-        <p class="text-2xl text-white indent-80 mb-4">24</p>
-        <p class="text-2xl text-white indent-80 mb-4">25</p>
     </div>
     <br>
-    <div class="flex flex justify-center">
-        <h2 class="flex flex text-4xl text-white justify-center">Most Played</h2>
+    <div class="flex">
+        <h2 class="flex flex text-4xl text-white ">Most Played</h2>
         <!-- Add API Data -->
         
     </div>
     <br>
-    <div class="flex flex justify-center">
-        <h2 class="flex flex text-4xl text-white justify-center">Playlists</h2>
+    <div class="flex">
+        <h2 class="flex text-4xl text-white ">Playlists</h2>
         <!-- Add API Data -->
         
     </div>
