--- a/views/layouts/welcome-layout.handlebars
+++ b/views/layouts/welcome-layout.handlebars
@@ -10,17 +10,18 @@
     <title>AudioRED</title>
   </head>
 
-  <body class='bg-gray-800'>
+  <body class='bg-zinc-800'>
     <div class=''>
       <header >
         <h1 class=''> 
           {{#if logged_in}}
-            <a class= 'text-lg-white' href='/home'>Audio<span class='text-red-500'>RED</span></a>
+            <a class= 'text-zinc-300' href='/home'>Audio<span class='text-rose-600'>RED</span></a>
           {{else}}
-            <a class= 'text-gray text-8xl text-shadow-outline flex justify-center p-10 max-w-max mx-auto mt-48 bg-gray-700 rounded-xl shadow-lg flex items-center' href='/home'>Audio<span class='text-red-500'>RED</span></a>
+            <a class= 'outline outline-1 outline-zinc-700 text-zinc-300 font-medium text-8xl text-shadow-outline flex justify-center p-10 max-w-max mx-auto mt-48 bg-zinc-950 rounded-xl shadow-lg flex items-center' href='/home'>Audio<span class='font-bold text-rose-600'>RED</span></a>
           {{/if}}
         </h1>
-        <nav class="text-shadow-outline flex justify-center p-10 max-w-max mx-auto mt-28 bg-gray-700 rounded-xl shadow-lg flex items-center text-gray text-md'">
+        
+        <nav class="outline outline-1 outline-zinc-700 flex justify-center p-10 max-w-max mx-auto mt-28 bg-zinc-950 rounded-xl shadow-lg flex items-center text-zinc text-md">
           <!-- Conditionally render login or logout links -->
           {{#if logged_in}}
             <a href='/home'>AudioRED</a>
@@ -29,7 +30,7 @@
 
             <button class='' id='logout'>logout</button>
           {{else}}
-            <a class='text-red-500' href='/login'>Login or Sign-up</a>
+            <a class='text-rose-300 font-medium' href='/login'>Login or Sign-up</a>
           {{/if}}
         </nav>
       </header>
