finished home page style/started profile page

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,37 +1,15 @@
-<section class="">
-    <nav class="flex justify-end">
-        <div>
-            <button class="text-xl bg-red-500 text-white px-4 py-2 rounded-md">Trending</button>
-            <button class="text-xl bg-red-500 text-white px-4 py-2 rounded-md">Top 25</button>
-            <button class="text-xl bg-red-500 text-white px-4 py-2 rounded-md">Most Played</button>
-            <button class="text-xl bg-red-500 text-white px-4 py-2 rounded-md">Playlists</button>
-        </div>
-    </nav>
+<div class="columns-2 columns-xl mt-0 gap-8">
+    <div class="flex flex-col h-screen p-6">        
+        <h2 class="p-4 bg-zinc-950 outline outline-1 outline-zinc-600 rounded text-3xl font-semibold mb-6 text-center text-rose-300">Trending Now</h2>
+            <div class=" p-1 flex-1 w-full outline outline-1 outline-zinc-600 rounded m-auto bg-zinc-700">
+                <ol id='trending' class="text-zinc-300 text-lg font-medium / p-3 outline outline-1 outline-zinc-700 rounded-xl shadow-lg / border border-8 border-zinc-700 rounded-md bg-zinc-500">data here</ol>
+            </div>
+    </div>
+    <div class="flex flex-col h-screen p-6">
+        <h2 class="p-4 bg-zinc-950 outline outline-1 outline-zinc-600 rounded text-3xl font-semibold mb-6 text-center text-rose-300">My Top 10 Songs</h2>
+            <div class="flex-1 w-full outline outline-1 outline-zinc-600 rounded m-auto bg-zinc-700">
+                <ol id='topTen' class="text-zinc-300 text-lg font-medium / p-3 outline outline-1 outline-zinc-700 rounded-xl shadow-lg / border border-8 border-zinc-700 rounded-md bg-zinc-500">data here</ol>
+            </div>
+    </div>
+</div>
 
-
-</section>
-<br>
-    <div>
-        <h2 class="flex flex text-white  text-4xl">Trending Now</h2>
-        <br>
-        <p class="text-2xl text-white indent-80 mb-4">1</p>
-    <br>
-    <div>
-        <h2 class="flex flex text-white text-4xl">Top 25</h2>
-        <br>
-        <p class="text-2xl text-white indent-80 mb-4">1</p>
-    </div>
-    <br>
-    <div class="flex">
-        <h2 class="flex flex text-4xl text-white ">Most Played</h2>
-        <!-- Add API Data -->
-        
-    </div>
-    <br>
-    <div class="flex">
-        <h2 class="flex text-4xl text-white ">Playlists</h2>
-        <!-- Add API Data -->
-        
-    </div>
-</section>
-</section>
