--- a/views/layouts/welcome-layout.handlebars
+++ b/views/layouts/welcome-layout.handlebars
@@ -28,7 +28,7 @@
 
             <a href='/profile'>profile</a>
 
-            <button class='' id='logout'>logout</button>
+            <button class='text-zinc-300 font-medium' id='logout'>logout</button>
           {{else}}
             <a class='text-rose-300 font-medium' href='/login'>Login or Sign-up</a>
           {{/if}}
