--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<div class="flex justify-center items-center w-screen h-screen bg-zinc-800">
+<div class="flex justify-center items-center w-screen mt-24 bg-zinc-800">
   <div class="w-full max-w-4xl flex">
     <div class="w-full max-w-xl px-2">
       <h2 class="text-3xl font-bold mb-6 text-center text-rose-300">Login</h2>
