--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,4 +1,4 @@
-<h2>
-  Hello
-  {{first_name}}, this is your profile page. Please change me or remove me.
+<h2 class='space-x-4 outline outline-1 outline-zinc-700 text-zinc-300 font-medium text-5xl text-shadow-outline flex justify-center p-6 max-w-screen-lg mx-auto mt-6 bg-zinc-950 rounded-xl shadow-lg flex items-center'>
+  <span class='font-bold text-rose-600'>{{first_name}}'s</span>
+  <span> Page</span>
 </h2>
