--- a/views/layouts/welcome-layout.handlebars
+++ b/views/layouts/welcome-layout.handlebars
@@ -17,7 +17,7 @@
           {{#if logged_in}}
             <a class= 'text-zinc-300' href='/home'>Audio<span class='text-rose-600'>RED</span></a>
           {{else}}
-            <a class= 'outline outline-1 outline-zinc-700 text-zinc-300 font-medium text-8xl text-shadow-outline flex justify-center p-10 max-w-max mx-auto mt-48 bg-zinc-950 rounded-xl shadow-lg flex items-center' href='/home'>Audio<span class='font-bold text-rose-600'>RED</span></a>
+            <a class= 'outline outline-1 outline-zinc-700 text-zinc-300 font-medium text-8xl text-shadow-outline flex justify-center p-10 max-w-max mx-auto mt-48 bg-zinc-950 rounded-xl shadow-lg flex items-center' href='/spotify/login'>Audio<span class='font-bold text-rose-600'>RED</span></a>
           {{/if}}
         </h1>
         
