made the spotify links open to a new tab

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -11,7 +11,7 @@
       <h2 class="p-4 bg-zinc-950 outline outline-1 outline-zinc-600 rounded text-3xl font-semibold mb-6 text-center text-rose-300">My Favorite Artists</h2>
       <ol id='topTen' class="text-zinc-300 text-lg font-medium / p-3 outline outline-1 outline-zinc-700 rounded-xl shadow-lg / border border-8 border-zinc-700 rounded-md bg-zinc-950">
         {{#each artists}}
-          <a href="{{this.external_urls.spotify}}">
+          <a href="{{this.external_urls.spotify}}" target="_blank">
           <li class="m-2 items-center flex flex-none space-x-4 text-zinc-300 hover:text-rose-300 text-lg font-medium p-3 outline outline-1 outline-zinc-300 rounded-xl shadow-lg border border-8 border-zinc-700 rounded-md bg-zinc-950">
           <img class="w-20 h-20" src="{{this.images.[1].url}}">
           <div class="flex-1">{{this.name}}</div>
@@ -25,7 +25,7 @@
       {{#each playlists}}
           <div class=" col-span-3 sm:col-span-3 md:col-span-1 ">
             <div class="p-1 w-full rounded rounded-xl "> 
-              <a href={{this.external_urls.spotify}} class="flex justify-center">
+              <a href={{this.external_urls.spotify}} class="flex justify-center" target="_blank">
                 <ol id='trending' class="flex flex-col items-center justify-center w-full space-x-2 text-zinc-300 hover:text-rose-300 text-lg font-medium / p-1 outline outline-1 outline-zinc-300 rounded-xl shadow-lg / border border-8 border-zinc-700 rounded-xl bg-zinc-950">
                   <img class="w-24 h-24" src={{this.images.[0].url}}>
                   <h3 class="text-zinc-100 hover:text-rose-300 font-medium">{{this.name}}</h3>
@@ -47,7 +47,7 @@
       {{#each newRelease}}
           <div class=" col-span-3 sm:col-span-3 md:col-span-1 ">
             <div class="p-1 w-full rounded rounded-xl "> 
-              <a href={{this.external_urls.spotify}} class="flex justify-center">
+              <a href={{this.external_urls.spotify}} class="flex justify-center" target="_blank">
                 <ol id='trending' class="flex flex-col items-center justify-center w-full space-x-2 text-zinc-300 hover:text-rose-300 text-lg font-medium / p-1 outline outline-1 outline-zinc-300 rounded-xl shadow-lg / border border-8 border-zinc-700 rounded-xl bg-zinc-950">
                   <img class="w-28 h-28" src={{this.images.[1].url}}>
                   <h3 class="text-zinc-100 hover:text-rose-300 font-medium">{{this.name}}</h3>
