--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,7 +8,7 @@
             <ol id='trending'
                 class="text-zinc-300 text-lg font-medium / p-3 outline outline-1 outline-zinc-700 rounded-xl shadow-lg / border border-8 border-zinc-700 rounded-md bg-zinc-500">
                 {{#each trendingPlaylists}}
-                <a href="{{this.external_urls.spotify}}">
+                <a href="{{this.external_urls.spotify}}" target="_blank">
                     <li
                         class="m-2 items-center flex flex-none space-x-4 text-zinc-300 hover:text-rose-300 text-lg font-medium p-3 outline outline-1 outline-zinc-300 rounded-xl shadow-lg border border-8 border-zinc-700 rounded-md bg-zinc-950">
                         <img class="w-20 h-20" src="{{this.images.[0].url}}">
@@ -27,7 +27,7 @@
             <ol id='topTen'
                 class="text-zinc-300 text-lg font-medium / p-3 outline outline-1 outline-zinc-700 rounded-xl shadow-lg / border border-8 border-zinc-700 rounded-md bg-zinc-500">
                 {{#each topSongs}}
-                <a href="{{this.external_urls.spotify}}">
+                <a href="{{this.external_urls.spotify}}" target="_blank">
                     <li
                         class="m-2 items-center flex flex-none space-x-4 text-zinc-300 hover:text-rose-300 text-lg font-medium p-3 outline outline-1 outline-zinc-300 rounded-xl shadow-lg border border-8 border-zinc-700 rounded-md bg-zinc-950">
                         <img class="w-20 h-20" src="{{this.album.images.[1].url}}">
