--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,8 +5,7 @@
             class="p-4 bg-zinc-950 outline outline-1 outline-zinc-600 rounded text-3xl font-semibold mb-6 text-center text-rose-300">
             Trending Playlists</h2>
         <div class="h- p-1 flex-1 w-full outline outline-1 outline-zinc-600 rounded m-auto bg-zinc-700">
-            <ol id='trending'
-                class="text-zinc-300 text-lg font-medium / p-3 outline outline-1 outline-zinc-700 rounded-xl shadow-lg / border border-8 border-zinc-700 rounded-md bg-zinc-500">
+            <ol id='trending' class="text-zinc-300 text-lg font-medium / p-3 outline outline-1 outline-zinc-700 rounded-xl shadow-lg / border border-8 border-zinc-700 rounded-md bg-zinc-500">
                 {{#each trendingPlaylists}}
                 <a href="{{this.external_urls.spotify}}" target="_blank">
                     <li
