--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -29,9 +29,9 @@
           <h2 class="p-4 bg-zinc-950 outline outline-1 outline-zinc-600 rounded text-3xl font-semibold mb-6 text-center text-rose-300">My Recent Playlists</h2>
       <div class="border border-8 border-zinc-700 rounded-md content-center bg-zinc-500 rounded rounded-2xl grid grid-cols-3 gap-8 p-2">
       {{#each playlists}}
-          <div class=" col-span-3 lg:col-span-3 xl:col-span-1 " target="_blank">
+          <div class=" col-span-3 lg:col-span-3 xl:col-span-1 " >
             <div class="p-1 w-full rounded rounded-xl "> 
-              <a href={{this.external_urls.spotify}} class="">
+              <a href={{this.external_urls.spotify}} class="" target="_blank">
                 <ol id='trending' class="flex flex-col items-center justify-center w-full space-x-2 text-zinc-300 text-lg font-medium / p-1 outline outline-1 outline-zinc-300 rounded-xl shadow-lg / border border-8 border-zinc-700 rounded-xl bg-zinc-950">
                   <img class="w-42 h-42" src={{this.images.[0].url}}>
                   <div class="flex-1">------</div>
